--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     <script>
         fetch("https://ci-swapi.herokuapp.com/api/")
             .then(response => response.json()) // or .json()
-            .then(data => {
-                document.getElementById("content").innerText = data.people;
-            });
+            .then(data => displayData(data))
+            .catch((e) => {
+                console.log("Error: ", e);
+            }),
+
+            function displayData(data) {
+                document.getElementById("content").innerText = data;
+            }
     </script>
 </body>
 
